--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.kiranp.calculator.MainActivity">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:orientation="horizontal">
         <TextView
             android:id="@+id/result"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:gravity="center_vertical"
             android:textSize="40sp"
             android:textDirection="rtl"
             android:textColor="@color/result"/>
-        <LinearLayout
+    </LinearLayout>
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/result"
+            android:layout_weight="1"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
                 android:orientation="horizontal">
-                <button
-                    android:id="@+id/"
-
-
-
 
             </LinearLayout>
             <LinearLayout
@@ -58,17 +60,4 @@
 
             </LinearLayout>
         </LinearLayout>
-
-
-
-
-        
-
-
-
-
-
-    </RelativeLayout>
-
-
-</RelativeLayout>
+    </LinearLayout>
