--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="result">#000</color>
+    <color name="header">#c5cae9</color>
+    <color name="buttonbg">#d3d3d3</color>
+
 
 </resources>
