calc first commit
add,sub,mul,div without prescedence

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,204 +1,236 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.kiranp.calculator.MainActivity">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"
-        android:orientation="horizontal">
+        android:orientation="vertical">
         <TextView
             android:id="@+id/result"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
             android:gravity="center_vertical"
-            android:textSize="@string/resulttextsize"
-            android:textDirection="rtl"
+            android:textSize="60dp"
             android:textColor="@color/result"/>
     </LinearLayout>
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:backgroundTint="@color/buttonbg"
-            android:background="@color/buttonbg">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.0"
-                android:orientation="horizontal">
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/ac"
-                    android:text="@string/Allclear"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/toggle"
-                    android:text="@string/toggler"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/sqrt"
-                    android:text="@string/sqrt"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/clear"
-                    android:text="@string/clear"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/ac"
+                android:text="@string/Allclear"
+                android:layout_weight="1"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:onClick="buttonpress"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/toggle"
+                android:text="@string/toggler"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:layout_weight="1"
+                android:textSize="20sp"
+                android:onClick="buttonpress"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/sqrt"
+                android:text="@string/sqrt"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="operand"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/clear"
+                android:text="@string/clear"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="buttonpress"/>
 
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.0">
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/n7"
-                    android:text="@string/number7"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/n8"
-                    android:text="@string/number8"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/n9"
-                    android:text="@string/number9"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/div"
-                    android:text="@string/div"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.0">
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/n4"
-                    android:text="@string/number4"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/n5"
-                    android:text="@string/number5"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/n6"
-                    android:text="@string/number6"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/mul"
-                    android:text="@string/mul"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.0">
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/n1"
-                    android:text="@string/number1"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/n2"
-                    android:text="@string/number2"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/n3"
-                    android:text="@string/number3"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/sub"
-                    android:text="@string/sub"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.0">
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/dot"
-                    android:text="@string/dot"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/n0"
-                    android:text="@string/number0"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/equal"
-                    android:text="@string/equal"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/add"
-                    android:text="@string/add"
-                    android:layout_weight="1"
-                    android:textSize="@string/buttontextsize"/>
-
-            </LinearLayout>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/n7"
+                android:text="@string/number7"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="buttonpress" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/n8"
+                android:text="@string/number8"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="buttonpress"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/n9"
+                android:text="@string/number9"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="buttonpress"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/div"
+                android:text="@string/div"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="operand"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/n4"
+                android:text="@string/number4"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:layout_weight="1"
+                android:onClick="buttonpress"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/n5"
+                android:text="@string/number5"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="buttonpress"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/n6"
+                android:text="@string/number6"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="buttonpress"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/mul"
+                android:text="@string/mul"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="operand"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/n1"
+                android:text="@string/number1"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="buttonpress"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/n2"
+                android:text="@string/number2"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="buttonpress"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/n3"
+                android:text="@string/number3"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="buttonpress"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/sub"
+                android:text="@string/sub"
+                android:layout_weight="1"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:onClick="operand"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/dot"
+                android:text="@string/dot"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="buttonpress"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/n0"
+                android:text="@string/number0"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="buttonpress"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/equal"
+                android:text="@string/equal"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:onClick="equals"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/add"
+                android:text="@string/add"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:layout_weight="1"
+                android:onClick="operand"/>
+        </LinearLayout>
+    </LinearLayout>
+
     </LinearLayout>
