--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:textSize="60dp"
+            android:textSize="70sp"
+            android:maxLines="1"
+            android:textDirection="rtl"
             android:textColor="@color/result"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/result2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:textSize="40sp"
+            android:textDirection="rtl"
+            android:textColor="@color/result"
+            android:text=""/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -64,7 +81,7 @@
                 style="@style/Base.Widget.AppCompat.Button.Borderless"
                 android:textSize="20sp"
                 android:layout_weight="1"
-                android:onClick="buttonpress"/>
+                android:onClick="delete"/>
 
         </LinearLayout>
         <LinearLayout
