--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="result">#000</color>
     <color name="header">#c5cae9</color>
-    <color name="buttonbg">#d3d3d3</color>
+    <color name="buttonbg">#e3f2fd</color>
 
 
 </resources>
